Fixed navbar on smaller screens

--- a/public_html/css/style.css
+++ b/public_html/css/style.css
@@ -7,10 +7,22 @@ body {
 	opacity:0.95;
 }
 
+.navbar-brand>img {
+    margin: -15px;
+}
+
 @media (min-width: 768px) {
   #jumbo-image {
   	padding-right: 10px;
   }
+}
+
+@media (max-width: 550px) {
+	.navbar-brand>img {
+	    margin: -15px;
+	    padding-top: 5px;
+	    max-width: 260px;
+	}
 }
 
 .panel-text {
